fixed spacing on green page

--- a/src/app/green-page/green-page.component.css
+++ b/src/app/green-page/green-page.component.css
@@ -13,15 +13,13 @@
     text-align: center;
     font-weight: bold;
 }
-
 .myForm {
     color: rgb(17, 221, 10);
-    margin: 0 80px 40px 80px;
+    margin: 0 20px 20px 20px;
 }
 
 .form-control {
     color: rgb(49, 236, 43);
-    text-align: center;
 }
 
 .submitButtonContainer {
@@ -50,3 +48,36 @@ input[type="color"]:focus,
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(126, 239, 104, 0.6);
   outline: 0 none;
 }
+
+::placeholder {
+    color: rgba(25, 151, 0, 0.637);
+}
+
+.form-control:focus {
+    border-color: rgba(126, 239, 104, 0.8);
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px gba(0, 255, 0, 0.534);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0, 255, 0, 0.534);
+}
+
+.btn-green:hover {
+    color: white;
+    background-color: rgb(136, 255, 136);
+    border-color: rgb(136, 255, 136);
+}
+
+.btn-green,
+.btn-green:active,
+.btn-green:focus {
+    color: white;
+    background-color: rgb(12, 207, 12);
+    border-color: rgb(12, 207, 12);
+}
+
+@media (min-width: 1200px) {
+    .myForm {
+        color: rgb(17, 221, 10);
+        margin: 0 80px 40px 80px;
+    }
+}
+
